<resources>
    <string name="app_name">MAD_Mini_Project</string>
    <string name="My_Acount_page">My Accounts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_add_account">Add Account</string>
    <string name="add_account_text_msg">Just add your account details now !.You can edit them later.</string>
    <string name="add_account_name">Enter a Unique Account Name You like</string>
    <string name="add_account_balance">Enter initial account balance</string>
    <string name="account_save_btn">SAVE</string>
    <string name="current_acc_balance">Enter the current balance</string>
    <string name="page_update_account">Edit Account</string>
    <string name="page_transfer_money">Transfer Money</string>
    <string name="transfer_amnt">Enter the amount</string>
    <string name="tot_acc_balance">10000.00</string>
    <string name="tot_tag_for_account">Tot :</string>
    <string name="acc_back_button">Back</string>
    <string name="codetalk_welcome">CodeTalk</string>

    <string name="transaction_prompt">Choose a type</string>

    <string-array name="transaction_arrays">
        <item>Income</item>
        <item>Expence</item>

    </string-array>

    <string name="t_category_prompt">Choose a category</string>
    <string-array name="t_category_arrays">
        <item>Electric</item>
        <item>Water</item>
        <item>Rental</item>
        <item>Salary</item>
        <item>Fee</item>

    </string-array>




    <string name="Setup_Budget">Setup Budget</string>
    <string name="Add_Envelope_Page">Add Envelope</string>
    <string name="Edit_Envelope">Edit Budget</string>
    <string name="txtName">Name</string>
    <string name="txtAmount">Amount</string>
    <string name="BtnAdd">ADD</string>
    <string name="BtnCancel">CANCEL</string>
    <string name="addNewEnvelopeTopic">Add New Envelope</string>
    <string name="envelope_name">Envelope Name :</string>
    <string name="budget_amount">Budget Amount :</string>
    <string name="edit_envelope_topic">Edit Envelope</string>
    <string name="deleteBtn">Delete</string>
    <string name="updateBtn">Update</string>
    <string name="addAmountText">Amount</string>
    <string name="displayEnvelopeName">Name</string>
    <string name="displayAmount">Amount</string>



    <string name="_0_00">0.00</string>

</resources>

