<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEnvelope">

    <TextView
        android:id="@+id/AddEnvelopeTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNewEnvelopeTopic"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/AddEnvelopeName"
        android:layout_width="155dp"
        android:layout_height="37dp"
        android:text="@string/envelope_name"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <TextView
        android:id="@+id/AddBudgetAmount"
        android:layout_width="155dp"
        android:layout_height="37dp"
        android:text="@string/budget_amount"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

<!--    <TextView-->
<!--        android:id="@+id/AddMonthPeriod"-->
<!--        android:layout_width="155dp"-->
<!--        android:layout_height="37dp"-->
<!--        android:text="@string/month_period"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/design_default_color_on_secondary"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.019"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.651" />-->

    <EditText
        android:id="@+id/AddEnvelopeNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311"
        android:autofillHints="" />

    <Button
        android:id="@+id/AddButton"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:background="#0040FF"
        android:textColor="@android:color/white"
        android:text="@string/BtnAdd"
        android:textAlignment="center"
        android:textColorHint="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834" />

    <Button
        android:id="@+id/CancelButton"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:background="#0040FF "
        android:textColor="@android:color/white"
        android:text="@string/BtnCancel"
        android:textAlignment="center"
        android:textColorHint="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834" />

    <EditText
        android:id="@+id/AddBudgetAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addAmountText"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473"
        android:autofillHints="" />

<!--    <Spinner-->
<!--        android:id="@+id/monthSpinner"-->
<!--        android:layout_width="213dp"-->
<!--        android:layout_height="49dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.929"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.645" />-->

</androidx.constraintlayout.widget.ConstraintLayout>