<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateEnvelope">

    <TextView
        android:id="@+id/EditEnvelopeTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126"
        android:text="@string/edit_envelope_topic" />

    <TextView
        android:id="@+id/EditEnvelopeName"
        android:layout_width="155dp"
        android:layout_height="37dp"
        android:text="@string/envelope_name"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <TextView
        android:id="@+id/EditBudgetAmount"
        android:layout_width="155dp"
        android:layout_height="37dp"
        android:text="@string/budget_amount"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

<!--    <TextView-->
<!--        android:id="@+id/EditMonthPeriod"-->
<!--        android:layout_width="155dp"-->
<!--        android:layout_height="37dp"-->
<!--        android:text="@string/month_period"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/design_default_color_on_secondary"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.019"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.651" />-->

    <EditText
        android:id="@+id/EditEnvelopeNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EditBudgetAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtAmount"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473"
        android:autofillHints="" />

<!--    <EditText-->
<!--        android:id="@+id/EditMonthPeriodText"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/txtMonth"-->
<!--        android:inputType="textPersonName"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.92"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.637"-->
<!--        android:autofillHints="" />-->

    <Button
        android:id="@+id/UpdateButton"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:background="#0040FF"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834"
        android:text="@string/updateBtn" />

    <Button
        android:id="@+id/DeleteButton"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:background="#0040FF "
        android:textColor="@android:color/white"
        android:text="@string/deleteBtn"
        android:textAlignment="center"
        android:textColorHint="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834" />


</androidx.constraintlayout.widget.ConstraintLayout>